# ML-Trading-Bot

./: .env copy  .gitignore  ALPHA_RESEARCH_FINDINGS.md  COMPREHENSIVE_DIAGNOSIS.md  CORRECT_TRAINING_COMMANDS.md  DIAGNOSTIC_SUMMARY.md  ENSEMBLE_GUIDE.md  FINAL_HONEST_ASSESSMENT.md  HIGH_WINRATE_FINDINGS.md  LIVE_TRADING_GUIDE.md  OPTIMIZATION_RESULTS.md  OVERFITTING_FIX.md  QUICK_FIXES.md  README.md  SIMPLIFIED_MENU_GUIDE.md  SMC_RESEARCH.md  SPY_OPTIMIZATION_SUMMARY.md  SPY_WFA_GUIDE.md  TEST_STATUS.md  TRADE_COUNT_ANALYSIS.md  WINNING_STRATEGY.md  adaptive_state.json  adaptive_state_orb_spy.json  btc_binance_state.json  btc_high_winrate_state.json  btc_highwr_adaptive_state.json  btc_robust_state.json  btc_v2_state.json  btc_v3_state.json  commands.txt  config.yml  config_orb_spy.yml  config_orb_xau.yml  download_spy_data.py  example_wfa.ipynb  pyproject.toml  requirements.txt  spy_adaptive_state.json
.ipynb_checkpoints/: TRADE_COUNT_ANALYSIS-checkpoint.md  ssh-instructions-checkpoint
Data/: BTCUSD_1d_yfinance.parquet  BTCUSD_1h_yfinance.parquet
alpha_reports/: 20251126_205910_summary.csv  20251126_210031_summary.csv  20251126_214241_summary.csv  20251126_214409_summary.csv
alpha_research/: README.md  __init__.py  alpha_config.yml  cli.py  config.py  orchestrator.py
configs/: config_btc_binance.yml  config_btc_high_winrate.yml  config_btc_optimized.yml  config_btc_robust.yml  config_btc_v2.yml  config_btc_v3.yml  config_spy.yml  config_spy_optimized.yml
ml_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
models/: spy_lgbm.pkl  (+7 more)
(+333 files in other folders)
